--- a/src/scss/sections/_shared.scss
+++ b/src/scss/sections/_shared.scss
@@ -1,13 +1,18 @@
 .layout {
-    min-height: 100%;
+    min-height: 100vh;
+    min-height: 100dvh;
     // overflow-x: hidden;
+    // overflow: hidden;
     // display: grid;
-    // grid-template-rows: auto 1fr auto;
+    // grid-template-rows: auto minmax(0, 1fr) auto;
 
-    // .footer {
-    //     margin-top: auto;
-    //     grid-column: -1;
-    // }
+    /* maybe remove this altogether as the page isn't short */
+    display: flex;
+    flex-direction: column;
+    .footer {
+        margin-top: auto;
+        // grid-column: -1;
+    }
 }
 
 .bg--full--saptha {
